--- a/index.html
+++ b/index.html
@@ -441,13 +441,13 @@
 			<div>
 				<div class="footer_mobile">
 					<a href="#">
-						<img src="img/app_store.png" alt="App Store">
+						<img src="img/appstr.png" alt="App Store">
 					</a>
 					<a href="#">
-						<img src="img/google_play.png" alt="Google play">
+						<img src="img/googleplay.png" alt="Google play">
 					</a>
 					<a href="#">
-						<img src="img/window_store.png" alt="Windows store">
+						<img src="img/windowsstore.png" alt="Windows store">
 					</a>
 				</div>
 			</div>
